# pySeK

./: .gitignore  README.md  pyproject.toml
Segmenter/: __init__.py  __main__.py  seg.py  segmenter.py  segmenterClass.py
tests/: test_Segmenter.py
